# rationalpy

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  api.html  changelog.html  example.ipynb  genindex.html  index.html  installing.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  changelog.doctree  environment.pickle  index.doctree  installing.doctree
.github/workflows/: ci.yml  publish.yml
_static/: documentation_options.js
doc/: changelog.md  conf.py
docs/: .buildinfo  api.html  conf.py  index.html  installing.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: api.doctree  changelog.doctree  environment.pickle  index.doctree  installing.doctree
docs/_build/html/: .buildinfo  api.html  changelog.html  genindex.html  index.html  installing.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  changelog.doctree  environment.pickle  index.doctree  installing.doctree
docs/_sources/: installing.md.txt
docs/_sphinx/: conf.py
rationalpy/: __init__.py  rational_array.py  rational_array_class.py
tests/: test_RationalArray_base.py  test_RationalArray_registry.py
